--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ name = "pypi"
 tensorflow = "*"
 pillow = "*"
 "beautifulsoup4" = "*"
+imageio = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.6"
