--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ Pillow = "*"
 beautifulsoup4 = "*"
 imageio = "*"
 matplotlib = "*"
-tensorflow = "==2.2.0"
+sklearn = "*"
+tensorflow-gpu = "==2.2.0"
 
 [dev-packages]
 
