ingestion tests passed

--- a/config/parameters/ingestion/config.yaml
+++ b/config/parameters/ingestion/config.yaml
@@ -3,10 +3,10 @@ max_zip_size: 128 #max size in MB
 scrappers: #list of StreamRetriever instances that will be used to produce scrappable URLs
 - class: LocalFileScrapper
   kwargs: 
-    folder: data/font-zipfiles/google
+    path: data/font-zipfiles/google
 - class: LocalFileScrapper
   kwargs: 
-    folder: data/font-zipfiles/dafont
+    path: data/font-zipfiles/dafont
 - class: LocalFileScrapper
   kwargs: 
-    folder: data/font-zipfiles/1001free
+    path: data/font-zipfiles/1001free
