--- a/config/parameters/preprocessing/file-processing-config.yaml
+++ b/config/parameters/preprocessing/file-processing-config.yaml
@@ -4,3 +4,5 @@ output_array_size: 64
 font_extraction_size: 100
 font_canvas_size: 500
 font_canvas_paddint: 100
+beam_parameters:
+  runner: direct
