--- a/config/parameters/preprocessing/config.yaml
+++ b/config/parameters/preprocessing/config.yaml
@@ -3,7 +3,9 @@ output_path: data/preprocessed
 output_array_size: 64
 font_extraction_size: 100
 font_canvas_size: 500
-font_canvas_paddint: 100
-beam_parameters:
+font_canvas_padding: 100
+beam_cmd_line_args:
 -  --runner
 -  DirectRunner
+- --direct_num_workers
+- 6
