--- a/config/parameters/preprocessing/config.yaml
+++ b/config/parameters/preprocessing/config.yaml
@@ -1,9 +1,10 @@
 input_path: data/ingested
 output_path: data/preprocessed
 output_array_size: 64
-font_extraction_size: 100
-font_canvas_size: 500
-font_canvas_padding: 100
+font_extraction_config:
+  font_extraction_size: 100
+  canvas_size: 500
+  canvas_padding: 100
 beam_cmd_line_args:
 -  --runner
 -  DirectRunner
