--- a/config/parameters/preprocessing.yaml
+++ b/config/parameters/preprocessing.yaml
@@ -1,9 +1,5 @@
-input:
-  path: data/ingested
-  file_format: zip
-output:
-  path: data/preprocessed
-  file_format: tfr
+input_path: data/ingested
+output_path: data/preprocessed
 output_array_size: 64
 font_extraction_size: 100
 canvas_size: 500
