--- a/config/parameters/preprocessing.yaml
+++ b/config/parameters/preprocessing.yaml
@@ -1,6 +1,7 @@
 input_path: data/ingested
 output_path: data/preprocessed
 output_array_size: 64
+max_output_file_size: 64
 font_extraction_size: 100
 canvas_size: 500
 canvas_padding: 100
