--- a/config/parameters/local-preprocessing.yaml
+++ b/config/parameters/local-preprocessing.yaml
@@ -1,5 +1,5 @@
 input_path: data/raw
-output_path: data/preprocessed
+output_path: "data/preprocessed"
 output_array_size: 64
 max_output_file_size: 64
 font_extraction_size: 100
@@ -10,3 +10,5 @@ beam_cmd_line_args:
 -  DirectRunner
 - --direct_num_workers
 - 6
+- --direct_running_mode
+- multi_processing
