--- a/config/parameters/local-preprocessing.yaml
+++ b/config/parameters/local-preprocessing.yaml
@@ -1,7 +1,7 @@
 input_path: data/raw
 output_path: "data/preprocessed"
 output_array_size: 64
-max_output_file_size: 64
+max_output_file_size: 64 #in MB
 font_extraction_size: 100
 canvas_size: 500
 canvas_padding: 100
