--- a/config/parameters/generative-uppercase.yaml
+++ b/config/parameters/generative-uppercase.yaml
@@ -1,23 +1,66 @@
-input_path: data/preprocessed
-output_path: data/scored
-model_path: data/model
+input_path: data/uppercase-scored
+output_path: data/uppercase-embeddings
+model_path: models/generative-uppercase
+charset: uppercase
 training:
+  filters:
+  - name: filter_misclassified
+  - name: filter_score
+    kwargs:
+      threshold: 0.9
   batch_size: 64
-  epochs: 10 
-  steps_per_epoch: 125000
+  epochs: 50
+  steps_per_epoch: 200
   optimizer:
     class: Adam
+    kwargs:
+      learning_rate: 0.001
   loss:
     class: CategoricalCrossentropy
   metrics:
   - accuracy
+  callbacks:
+  - class: TensorBoard
+    kwargs:
+      log_dir: logs/tensorboard/supervised-uppercase
+  - class: ReduceLROnPlateau
+    kwargs:
+      min_lr: 0.0001
+      factor: 0.5
+      patience: 2
+      monitor: MSE
 model:
   class: SAAE
   kwargs:
+    prior_batch_size: 64
+    reconstruction_loss_weight: 0.001
+    discriminator:
+      class: Sequential
+      kwargs:
+        layers:
+        - class: Input
+          kwargs:
+            shape:
+            - 10
+        - class: Dense
+          kwargs:
+            units: 100
+        - class: Dense
+          kwargs:
+            units: 100
+        - class: Dense
+          kwargs:
+            units: 1
     encoder:
       class: Sequential
       kwargs:
         layers:
+        - class: Input
+          kwargs:
+            shape:
+            - 64
+            - 64
+            - 1
         - class: Conv2D
           kwargs: 
             filters: 32
@@ -67,68 +110,61 @@ model:
             pool_size: 2
         - class: BatchNormalization
         - class: Flatten
-        - class: Dropout
-          kwargs: 
-            rate: 0.5
         - class: Dense
           kwargs:
-            units: 26
+            units: 10
     decoder:
       class: Sequential
       kwargs:
         layers:
-        - class: Conv2D
-          kwargs: 
-            filters: 32
-            kernel_size: 3
-            activation: elu
-            padding: same
-        - class: Conv2D
-          kwargs: 
-            filters: 64
-            kernel_size: 3
-            activation: elu
-            padding: same
-        - class: MaxPooling2D
+        - class: Input
           kwargs:
-            pool_size: 2
-        - class: BatchNormalization
+            shape:
+            - 36
+        - class: Dense
+          kwargs: 
+            units: 4096
+        - class: Reshape
+          kwargs: 
+            target_shape: 
+            - 8
+            - 8
+            - 64
+        - class: Conv2DTranspose
+          kwargs:
+            kernel_size: 2
+            activation: elu
+            strides: 2
+            filters: 64
         - class: Conv2D
           kwargs: 
             filters: 96
             kernel_size: 3
             activation: elu
             padding: same
-        - class: Conv2D
-          kwargs: 
-            filters: 128
-            kernel_size: 3
-            activation: elu
-            padding: same
-        - class: MaxPooling2D
-          kwargs: 
-            pool_size: 2
         - class: BatchNormalization
-        - class: Conv2D
-          kwargs: 
-            filters: 64
-            kernel_size: 3
-            activation: elu
-            padding: same
-        - class: Conv2D
-          kwargs: 
-            filters: 64
-            kernel_size: 3
-            activation: elu
-            padding: same
-        - class: MaxPooling2D
-          kwargs: 
-            pool_size: 2
-        - class: BatchNormalization
-        - class: Flatten
-        - class: Dropout
-          kwargs: 
-            rate: 0.5
-        - class: Dense
+        - class: Conv2DTranspose
           kwargs:
-            units: 26
+            kernel_size: 2
+            activation: elu
+            strides: 2
+            filters: 64
+        - class: Conv2D
+          kwargs: 
+            filters: 32
+            kernel_size: 3
+            activation: elu
+            padding: same
+        - class: BatchNormalization
+        - class: Conv2DTranspose
+          kwargs:
+            kernel_size: 2
+            activation: elu
+            strides: 2
+            filters: 32
+        - class: Conv2D
+          kwargs: 
+            filters: 1
+            kernel_size: 3
+            activation: sigmoid
+            padding: same
