--- a/config/parameters/pipeline.yaml
+++ b/config/parameters/pipeline.yaml
@@ -1,7 +1,7 @@
 stages:
 - class: FontIngestion
   yaml_config_path: config/parameters/ingestion.yaml
-- class: LabeledExamplesxtractor
+- class: LabeledCharsExtractor
   yaml_config_path: config/parameters/preprocessing.yaml
 - class: Predictor
   yaml_config_path: config/parameters/lowercase-supervised-training.yaml
