tidied up config files and improved README; added config schema to doc strings

--- a/config/parameters/models/classifier-uppercase.yaml
+++ b/config/parameters/models/classifier-uppercase.yaml
@@ -1,5 +1,6 @@
-input_path: data/preprocessed
-input_schema_class: LabeledChar
+# Train classification model for uppercase characters only; training all characters is problematic because some char images cannot really be classified correctly without context, e.g. c, k, o, s, u, v, x, y, z
+input_path: data/preprocessed-chars
+input_record_class: LabeledChar
 output_path: data/uppercase-scored
 model_path: models/supervised-uppercase
 charset: uppercase
