--- a/config/parameters/models/score-generative-uppercase.yaml
+++ b/config/parameters/models/score-generative-uppercase.yaml
@@ -1,5 +1,6 @@
+# score new images or retrain model
 input_path: data/uppercase-scored
-input_schema_class: ScoredLabeledChar
+input_record_class: ScoredLabeledChar
 output_path: data/uppercase-embeddings
 model_path: models/generative-uppercase
 charset: uppercase
