--- a/config/parameters/models/score-uppercase-fonts.yaml
+++ b/config/parameters/models/score-uppercase-fonts.yaml
@@ -1,11 +1,10 @@
 # score new images or retrain model
-input_path: data/preprocessed/chars
+input_path: data/preprocessed/fonts
 input_record_class: LabeledFont
 output_path: data/scored/uppercase/fonts
 model_path: models/supervised-uppercase
 charset: uppercase
 training:
-  batch_size: 128
   epochs: 50
   steps_per_epoch: 5000
   optimizer:
