--- a/environment.yaml
+++ b/environment.yaml
@@ -28,11 +28,8 @@ dependencies:
   - cudnn=7.6.5=cuda10.1_0
   - cupti=10.1.168=0
   - cython=0.29.21=py38he6710b0_0
-  - gast=0.4.0=py_0
-  - google-auth=1.22.1=py_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=py_0
-  - grpcio=1.36.1=py38h2157cd5_1
   - h5py=2.10.0=py38hd6299e0_1
   - hdf5=1.10.6=hb1b8bf9_0
   - idna=2.10=py_0
@@ -53,11 +50,8 @@ dependencies:
   - mkl_random=1.1.0=py38h962f231_0
   - multidict=4.7.6=py38h7b6447c_1
   - ncurses=6.2=he6710b0_1
-  - numpy=1.19.1=py38hbc911f0_0
-  - numpy-base=1.19.1=py38hfa32c7d_0
   - oauthlib=3.1.0=py_0
   - openssl=1.1.1k=h27cfd23_0
-  - opt_einsum=3.1.0=py_0
   - pip=21.1.3=py38h06a4308_0
   - protobuf=3.14.0=py38h2531618_1
   - pyasn1=0.4.8=py_0
@@ -67,7 +61,6 @@ dependencies:
   - pyopenssl=19.1.0=py_1
   - pysocks=1.7.1=py38_0
   - python=3.8.10=h12debd9_8
-  - python-flatbuffers=1.12=pyhd3eb1b0_0
   - readline=8.1=h27cfd23_0
   - requests=2.24.0=py_0
   - requests-oauthlib=1.3.0=py_0
@@ -80,7 +73,6 @@ dependencies:
   - tensorboard-plugin-wit=1.6.0=py_0
   - tensorflow=2.4.1=gpu_py38h8a7d6ce_0
   - tensorflow-base=2.4.1=gpu_py38h29c2da4_0
-  - tensorflow-estimator=2.5.0=pyh7b7c402_0
   - tensorflow-gpu=2.4.1=h30adc30_0
   - termcolor=1.1.0=py38_1
   - tk=8.6.10=hbc83047_0
@@ -92,6 +84,65 @@ dependencies:
   - yarl=1.6.2=py38h7b6447c_0
   - zipp=3.3.1=py_0
   - zlib=1.2.11=h7b6447c_3
+  - pip:
+    - apache-beam==2.31.0
+    - avro-python3==1.9.2.1
+    - beautifulsoup4==4.9.3
+    - crcmod==1.7
+    - cycler==0.10.0
+    - dill==0.3.1.1
+    - docopt==0.6.2
+    - fastavro==1.4.2
+    - fasteners==0.16.3
+    - flatbuffers==1.12
+    - future==0.18.2
+    - gast==0.3.3
+    - google-api-core==1.31.0
+    - google-api-python-client==2.13.0
+    - google-apitools==0.5.31
+    - google-auth==1.32.1
+    - google-auth-httplib2==0.1.0
+    - google-cloud-bigquery==2.20.0
+    - google-cloud-bigtable==1.7.0
+    - google-cloud-core==1.7.1
+    - google-cloud-datastore==1.15.3
+    - google-cloud-dlp==1.0.0
+    - google-cloud-language==1.3.0
+    - google-cloud-profiler==3.0.5
+    - google-cloud-pubsub==1.7.0
+    - google-cloud-spanner==1.19.1
+    - google-cloud-videointelligence==1.16.1
+    - google-cloud-vision==1.0.0
+    - google-crc32c==1.1.2
+    - google-resumable-media==1.3.1
+    - googleapis-common-protos==1.53.0
+    - grpc-google-iam-v1==0.12.3
+    - grpcio==1.32.0
+    - grpcio-gcp==0.2.2
+    - hdfs==2.6.0
+    - httplib2==0.19.1
+    - imageio==2.9.0
+    - kiwisolver==1.3.1
+    - matplotlib==3.4.2
+    - numpy==1.19.5
+    - oauth2client==4.1.3
+    - opt-einsum==3.3.0
+    - packaging==21.0
+    - pillow==8.3.1
+    - proto-plus==1.19.0
+    - pyarrow==4.0.1
+    - pydantic==1.8.2
+    - pydot==1.4.2
+    - pymongo==3.12.0
+    - pyparsing==2.4.7
+    - python-dateutil==2.8.2
+    - pytz==2021.1
+    - soupsieve==2.2.1
+    - strictyaml==1.4.4
+    - tensorboard-data-server==0.6.1
+    - tensorflow-estimator==2.4.0
+    - typing-extensions==3.7.4.3
+    - uritemplate==3.0.1
 variables:
   GOOGLE_APPLICATION_CREDENTIALS: config/credentials/gcp-credentials.json
   TF_FORCE_GPU_ALLOW_GROWTH: 'true'
