--- a/docker-images/training/Dockerfile
+++ b/docker-images/training/Dockerfile
@@ -1,6 +1,7 @@
-FROM conda/miniconda3
-COPY ./src /root/src
+FROM tensorflow/tensorflow:devel-gpu
+COPY ./src/fontai /root/fontai 
 COPY ./scripts /root/scripts
-COPY ./conda-env.yaml /root/conda-end.yaml
-RUN conda create --file /root/conda-env.yaml && conda activate textfont-ai && pip install -e /root/src
+RUN pip install /root/fontai
+
 ENTRYPOINT python /root/scripts/base/run-stage.py 
+
