runner dockerfile ready; added additiona log handling logic in main script

--- a/docker-images/training/Dockerfile
+++ b/docker-images/training/Dockerfile
@@ -1,16 +1,15 @@
-# FROM tensorflow/tensorflow:devel-gpu
-# ADD src/fontai /root/fontai 
-# ADD scripts /root/scripts
-# RUN pip install /root/fontai
-# ENV TF_FORCE_GPU_ALLOW_GROWTH=true
-# ENTRYPOINT python /root/scripts/base/run-stage.py 
-
 FROM continuumio/anaconda3
-COPY env/conda-env.yaml /root/conda-env.yaml 
-ADD scripts /root/scripts
-ADD src/fontai /root/fontai 
+WORKDIR /textfont-ai
+COPY env/conda-env.yaml ./conda-env.yaml 
+ADD scripts ./scripts
+ADD src/fontai ./fontai 
 #install gcc in order to compile beam[gcp] binaries
 RUN apt update && apt install build-essential -y
-RUN conda env create -f /root/conda-env.yaml && conda activate textfont-ai && pip install /root/fontai 
-RUN export TF_FORCE_GPU_ALLOW_GROWTH=true
-ENTRYPOINT python /root/scripts/base/run-stage.py 
+# setup conda env
+RUN conda update -n base -c defaults conda &&\
+  conda env create -f ./conda-env.yaml &&\
+  conda run -n textfont-ai pip install ./fontai
+
+ENV TF_FORCE_GPU_ALLOW_GROWTH=true
+ENV CONTAINER_ENV=true
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "textfont-ai", "python", "./scripts/base/run-stage.py"]
