--- a/conda-env.yaml
+++ b/conda-env.yaml
@@ -1,6 +1,5 @@
 name: textfont-ai
 channels:
-  - conda-forge
   - anaconda
   - defaults
 dependencies:
@@ -9,60 +8,31 @@ dependencies:
   - _tflow_select=2.1.0=gpu
   - absl-py=0.10.0=py38_0
   - aiohttp=3.6.3=py38h7b6447c_0
-  - alabaster=0.7.12=py_0
-  - alembic=1.4.1=py_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - asn1crypto=1.4.0=pyh9f0ad1d_0
   - astunparse=1.6.3=py_0
   - async-timeout=3.0.1=py38_0
-  - attrs=21.2.0=pyhd3eb1b0_0
-  - babel=2.8.0=py_0
+  - attrs=20.2.0=py_0
   - blas=1.0=mkl
   - blinker=1.4=py38_0
-  - brotli-python=1.0.9=py38h709712a_5
   - brotlipy=0.7.0=py38h7b6447c_1000
   - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2021.5.30=ha878542_0
+  - ca-certificates=2020.10.14=0
   - cachetools=4.1.1=py_0
-  - certifi=2021.5.30=py38h578d9bd_0
+  - certifi=2020.6.20=py38_0
   - cffi=1.14.3=py38he30daa8_0
   - chardet=3.0.4=py38_1003
   - click=7.1.2=py_0
-  - cloudpickle=1.6.0=py_0
-  - configparser=5.0.2=pyhd8ed1ab_0
   - cryptography=3.1.1=py38h1ba5d50_0
   - cudatoolkit=10.1.243=h6bb024c_0
   - cudnn=7.6.5=cuda10.1_0
   - cupti=10.1.168=0
-  - dash=1.20.0=pyhd8ed1ab_0
-  - dash-core-components=1.16.0=pyhd8ed1ab_0
-  - dash-html-components=1.1.3=pyhd8ed1ab_0
-  - dash-renderer=1.9.1=pyhd8ed1ab_0
-  - dash-table=4.11.3=pyhd8ed1ab_0
-  - databricks-cli=0.12.1=pyhd8ed1ab_0
-  - docker-py=5.0.0=py38h578d9bd_0
-  - docker-pycreds=0.4.0=py_0
-  - docutils=0.16=py38_1
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - flask=1.1.2=pyh9f0ad1d_0
-  - flask-compress=1.10.1=pyhd8ed1ab_0
-  - future=0.18.2=py38h578d9bd_3
   - gast=0.3.3=py_0
-  - gitdb=4.0.7=pyhd8ed1ab_0
-  - gitpython=3.1.18=pyhd8ed1ab_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=py_0
-  - greenlet=1.1.0=py38h709712a_0
-  - gunicorn=20.1.0=py38h578d9bd_0
   - h5py=2.10.0=py38hd6299e0_1
   - hdf5=1.10.6=hb1b8bf9_0
   - idna=2.10=py_0
-  - imagesize=1.2.0=py_0
   - importlib-metadata=2.0.0=py_1
-  - iniconfig=1.1.1=pyhd3eb1b0_0
   - intel-openmp=2020.2=254
-  - itsdangerous=2.0.1=pyhd8ed1ab_0
-  - jinja2=3.0.1=pyhd8ed1ab_0
   - keras-preprocessing=1.1.0=py_1
   - ld_impl_linux-64=2.35.1=h7274673_9
   - libffi=3.3=he6710b0_2
@@ -71,66 +41,34 @@ dependencies:
   - libgomp=9.3.0=h5101ec6_17
   - libprotobuf=3.13.0.1=hd408876_0
   - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - mako=1.1.4=pyh44b312d_0
   - markdown=3.3.2=py38_0
-  - markupsafe=2.0.1=py38h497a2fe_0
   - mkl=2019.4=243
   - mkl-service=2.3.0=py38he904b0f_0
   - mkl_fft=1.2.0=py38h23d657b_0
   - mkl_random=1.1.0=py38h962f231_0
-  - mlflow=1.19.0=py38he918c71_0
-  - more-itertools=8.8.0=pyhd3eb1b0_0
   - multidict=4.7.6=py38h7b6447c_1
   - ncurses=6.2=he6710b0_1
+  - numpy=1.19.1=py38hbc911f0_0
   - numpy-base=1.19.1=py38hfa32c7d_0
   - oauthlib=3.1.0=py_0
-  - openssl=1.1.1k=h7f98852_0
+  - openssl=1.1.1k=h27cfd23_0
   - opt_einsum=3.1.0=py_0
-  - packaging=21.0=pyhd3eb1b0_0
-  - pandas=1.3.0=py38h1abd341_0
   - pip=21.1.3=py38h06a4308_0
-  - plotly=5.1.0=pyhd8ed1ab_1
-  - pluggy=0.13.1=py38h06a4308_0
-  - prometheus_client=0.11.0=pyhd8ed1ab_0
-  - prometheus_flask_exporter=0.18.2=pyhd8ed1ab_0
   - protobuf=3.13.0.1=py38he6710b0_1
-  - py=1.10.0=pyhd3eb1b0_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=py_2
-  - pygments=2.7.1=py_0
   - pyjwt=1.7.1=py38_0
   - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyhd3eb1b0_0
   - pysocks=1.7.1=py38_0
-  - pytest=6.1.1=py38_0
   - python=3.8.10=h12debd9_8
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-editor=1.0.4=py_0
-  - python_abi=3.8=2_cp38
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py38h497a2fe_0
-  - querystring_parser=1.2.4=py_0
   - readline=8.1=h27cfd23_0
   - requests=2.24.0=py_0
   - requests-oauthlib=1.3.0=py_0
   - rsa=4.6=py_0
   - setuptools=52.0.0=py38h06a4308_0
   - six=1.15.0=py_0
-  - smmap=3.0.5=pyh44b312d_0
-  - snowballstemmer=2.0.0=py_0
-  - sphinx=4.0.2=pyhd3eb1b0_0
-  - sphinxcontrib-applehelp=1.0.2=py_0
-  - sphinxcontrib-devhelp=1.0.2=py_0
-  - sphinxcontrib-htmlhelp=1.0.3=py_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.3=py_0
-  - sphinxcontrib-serializinghtml=1.1.4=py_0
-  - sqlalchemy=1.4.20=py38h497a2fe_0
   - sqlite=3.36.0=hc218d9a_0
-  - sqlparse=0.4.1=pyh9f0ad1d_0
-  - tabulate=0.8.9=pyhd8ed1ab_0
-  - tenacity=8.0.1=pyhd8ed1ab_0
   - tensorboard=2.2.1=pyh532a8cf_0
   - tensorboard-plugin-wit=1.6.0=py_0
   - tensorflow=2.2.0=gpu_py38hb782248_0
@@ -139,35 +77,44 @@ dependencies:
   - tensorflow-gpu=2.2.0=h0d30ee6_0
   - termcolor=1.1.0=py38_1
   - tk=8.6.10=hbc83047_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - typing_extensions=3.7.4.3=py_0
   - urllib3=1.25.11=py_0
-  - websocket-client=0.57.0=py38h578d9bd_4
-  - werkzeug=1.0.1=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.12.1=py38h7b6447c_1
   - xz=5.2.5=h7b6447c_0
-  - yaml=0.2.5=h516909a_0
   - yarl=1.6.2=py38h7b6447c_0
   - zipp=3.3.1=py_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
+    - alembic==1.4.1
     - apache-beam==2.31.0
     - avro-python3==1.9.2.1
     - beautifulsoup4==4.9.3
+    - brotli==1.0.9
+    - cloudpickle==1.6.0
     - crcmod==1.7
     - cycler==0.10.0
+    - dash==1.21.0
+    - dash-core-components==1.17.1
+    - dash-html-components==1.1.4
+    - dash-table==4.12.0
+    - databricks-cli==0.14.3
     - dill==0.3.1.1
+    - docker==5.0.0
     - docopt==0.6.2
-    - fastavro==1.4.2
+    - entrypoints==0.3
+    - fastavro==1.4.4
     - fasteners==0.16.3
-    - flatbuffers==1.12
+    - flask==2.0.1
+    - flask-compress==1.10.1
+    - future==0.18.2
+    - gitdb==4.0.7
+    - gitpython==3.1.18
     - google-api-core==1.31.0
-    - google-api-python-client==2.13.0
+    - google-api-python-client==2.15.0
     - google-apitools==0.5.31
-    - google-auth==1.32.1
+    - google-auth==1.33.1
     - google-auth-httplib2==0.1.0
-    - google-cloud-bigquery==2.20.0
+    - google-cloud-bigquery==2.22.1
     - google-cloud-bigtable==1.7.0
     - google-cloud-core==1.7.1
     - google-cloud-datastore==1.15.3
@@ -181,25 +128,49 @@ dependencies:
     - google-crc32c==1.1.2
     - google-resumable-media==1.3.1
     - googleapis-common-protos==1.53.0
+    - greenlet==1.1.0
     - grpc-google-iam-v1==0.12.3
-    - grpcio==1.32.0
+    - grpcio==1.39.0
     - grpcio-gcp==0.2.2
+    - gunicorn==20.1.0
     - hdfs==2.6.0
     - httplib2==0.19.1
     - imageio==2.9.0
+    - itsdangerous==2.0.1
+    - jinja2==3.0.1
     - kiwisolver==1.3.1
+    - mako==1.1.4
+    - markupsafe==2.0.1
     - matplotlib==3.4.2
-    - numpy==1.19.5
+    - mlflow==1.19.0
     - oauth2client==4.1.3
+    - packaging==21.0
+    - pandas==1.3.1
     - pillow==8.3.1
+    - plotly==5.1.0
+    - prometheus-client==0.11.0
+    - prometheus-flask-exporter==0.18.2
     - proto-plus==1.19.0
     - pyarrow==4.0.1
     - pydantic==1.8.2
     - pydot==1.4.2
     - pymongo==3.12.0
+    - pyparsing==2.4.7
+    - python-dateutil==2.8.2
+    - python-editor==1.0.4
+    - pytz==2021.1
+    - pyyaml==5.4.1
+    - querystring-parser==1.2.4
     - scipy==1.4.1
+    - smmap==4.0.0
     - soupsieve==2.2.1
+    - sqlalchemy==1.4.22
+    - sqlparse==0.4.1
     - strictyaml==1.4.4
-    - tensorboard-data-server==0.6.1
+    - tabulate==0.8.9
+    - tenacity==8.0.1
+    - typing-extensions==3.7.4.3
     - uritemplate==3.0.1
+    - websocket-client==1.1.0
+    - werkzeug==2.0.1
 prefix: /home/nestor/miniconda3/envs/textfont-ai
